
cc_library(
    name = "graph_mutation_test_suite",
    hdrs = [ "graph_mutation_test_suite.h", ],
    testonly = True,
    deps = [
        "//bagl",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "graph_properties_test_suite",
    hdrs = [ "graph_properties_test_suite.h", ],
    testonly = True,
    deps = [
        "//bagl",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "min_cost_max_flow_utils",
    srcs = [],
    hdrs = [ "min_cost_max_flow_utils.h", ],
    testonly = True,
    deps = [
        "//bagl",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "tree_mutation_test_suite",
    hdrs = [ "tree_mutation_test_suite.h", ],
    testonly = True,
    deps = [
        "//bagl",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "adjacency_list_concepts_test",
    srcs = [ "adjacency_list_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_vec_test",
    srcs = [ "adjacency_vec_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_pool_test",
    srcs = [ "adjacency_pool_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_list_test",
    srcs = [ "adjacency_list_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_set_test",
    srcs = [ "adjacency_set_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_multiset_test",
    srcs = [ "adjacency_multiset_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_unordered_set_test",
    srcs = [ "adjacency_unordered_set_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_unordered_multiset_test",
    srcs = [ "adjacency_unordered_multiset_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_matrix_test",
    srcs = [ "adjacency_matrix_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_matrix_concepts_test",
    srcs = [ "adjacency_matrix_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_graph_test",
    srcs = [ "grid_graph_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_graph_concepts_test",
    srcs = [ "grid_graph_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "directed_graph_test",
    srcs = [ "directed_graph_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "undirected_graph_test",
    srcs = [ "undirected_graph_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "breadth_first_search_test",
    srcs = [ "breadth_first_search_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "depth_first_search_test",
    srcs = [ "depth_first_search_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "edge_list_concepts_test",
    srcs = [ "edge_list_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "vector_as_graph_concepts_test",
    srcs = [ "vector_as_graph_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bundled_properties_test",
    srcs = [ "bundled_properties_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "new_york_state_map",
    srcs = [ "new_york_state_map.cc", ],
    hdrs = [ "new_york_state_map.h", ],
    testonly = True,
    deps = [
        "//bagl",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "astar_search_test",
    srcs = [ "astar_search_test.cc", ],
    deps = [
        ":new_york_state_map",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dijkstra_shortest_paths_test",
    srcs = [ "dijkstra_shortest_paths_test.cc", ],
    deps = [
        ":new_york_state_map",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bellman_ford_test",
    srcs = [ "bellman_ford_test.cc", ],
    deps = [
        ":new_york_state_map",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "boyer_myrvold_test",
    srcs = [ "boyer_myrvold_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "betweenness_centrality_test",
    srcs = [ "betweenness_centrality_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bfl_d_ary_tree_test",
    srcs = [ "bfl_d_ary_tree_test.cc", ],
    deps = [
        ":graph_properties_test_suite",
        ":tree_mutation_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "biconnected_components_test",
    srcs = [ "biconnected_components_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bipartite_test",
    srcs = [ "bipartite_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "boykov_kolmogorov_max_flow_test",
    srcs = [ "boykov_kolmogorov_max_flow_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bron_kerbosch_all_cliques_test",
    srcs = [ "bron_kerbosch_all_cliques_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "closeness_centrality_test",
    srcs = [ "closeness_centrality_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "clustering_coefficient_test",
    srcs = [ "clustering_coefficient_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "copy_test",
    srcs = [ "copy_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_numbers_test",
    srcs = [ "core_numbers_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "csr_graph_test",
    srcs = [ "csr_graph_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cuthill_mckee_ordering_test",
    srcs = [ "cuthill_mckee_ordering_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cycle_canceling_test",
    srcs = [ "cycle_canceling_test.cc", ],
    deps = [
        ":min_cost_max_flow_utils",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "howard_cycle_ratio_test",
    srcs = [ "howard_cycle_ratio_test.cc", ],
    deps = [
        "//bagl",
        "//bagl:graphviz",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dag_longest_paths_test",
    srcs = [ "dag_longest_paths_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "degree_centrality_test",
    srcs = [ "degree_centrality_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "disjoint_set_test",
    srcs = [ "disjoint_set_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dominator_tree_test",
    srcs = [ "dominator_tree_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dimacs_test",
    srcs = [ "dimacs_test.cc", ],
    data = [
        "testdata/prgen_20_70_2.net",
    ],
    deps = [
        ":min_cost_max_flow_utils",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "eccentricity_test",
    srcs = [ "eccentricity_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "filtered_graph_test",
    srcs = [ "filtered_graph_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "floyd_warshall_test",
    srcs = [ "floyd_warshall_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "generator_test",
    srcs = [ "generator_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "gursoy_atun_layout_test",
    srcs = [ "gursoy_atun_layout_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "hawick_circuits_test",
    srcs = [ "hawick_circuits_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "incremental_components_test",
    srcs = [ "incremental_components_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "is_straight_line_draw_test",
    srcs = [ "is_straight_line_draw_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "johnson_test",
    srcs = [ "johnson_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "king_ordering_test",
    srcs = [ "king_ordering_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "graphml_test",
    srcs = [ "graphml_test.cc", ],
    data = [
        "testdata/graphml_test.xml",
    ],
    deps = [
        "//bagl",
        "//bagl:graphml",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "graphviz_test",
    srcs = [ "graphviz_test.cc", ],
    deps = [
        "//bagl",
        "//bagl:graphviz",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "graph_concepts_test",
    srcs = [ "graph_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "index_graph_test",
    srcs = [ "index_graph_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "isomorphism_test",
    srcs = [ "isomorphism_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "labeled_graph_test",
    srcs = [ "labeled_graph_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "layout_test",
    srcs = [ "layout_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "linked_tree_list_test",
    srcs = [ "linked_tree_list_test.cc", ],
    deps = [
        ":tree_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "linked_tree_vec_test",
    srcs = [ "linked_tree_vec_test.cc", ],
    deps = [
        ":tree_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "linked_tree_pool_test",
    srcs = [ "linked_tree_pool_test.cc", ],
    deps = [
        ":tree_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "linked_tree_set_test",
    srcs = [ "linked_tree_set_test.cc", ],
    deps = [
        ":tree_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "linked_tree_multiset_test",
    srcs = [ "linked_tree_multiset_test.cc", ],
    deps = [
        ":tree_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "linked_tree_unordered_set_test",
    srcs = [ "linked_tree_unordered_set_test.cc", ],
    deps = [
        ":tree_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "linked_tree_unordered_multiset_test",
    srcs = [ "linked_tree_unordered_multiset_test.cc", ],
    deps = [
        ":tree_mutation_test_suite",
        ":graph_properties_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "make_bicon_planar_test",
    srcs = [ "make_bicon_planar_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "make_connected_test",
    srcs = [ "make_connected_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "make_maximal_planar_test",
    srcs = [ "make_maximal_planar_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "matching_test",
    srcs = [ "matching_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "max_flow_test",
    srcs = [ "max_flow_test.cc", ],
    deps = [
        ":min_cost_max_flow_utils",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "maximum_adjacency_search_test",
    srcs = [ "maximum_adjacency_search_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "mcgregor_subgraphs_test",
    srcs = [ "mcgregor_subgraphs_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "mean_geodesic_test",
    srcs = [ "mean_geodesic_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "metis_test",
    srcs = [ "metis_test.cc", ],
    data = [
        "testdata/weighted_graph.gr",
    ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "metric_tsp_approx_test",
    srcs = [ "metric_tsp_approx_test.cc", ],
    data = [
        "testdata/metric_tsp_approx.graph",
    ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "minimum_degree_ordering_test",
    srcs = [ "minimum_degree_ordering_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "planar_input_files_test",
    srcs = [ "planar_input_files_test.cc", ],
    data = glob(["testdata/planar_input_graphs/*.dimacs"]),
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "property_map_range_test",
    srcs = [ "property_map_range_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "r_c_shortest_paths_test",
    srcs = [ "r_c_shortest_paths_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "random_matching_test",
    srcs = [ "random_matching_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "random_spanning_tree_test",
    srcs = [ "random_spanning_tree_test.cc", ],
    deps = [
        "//bagl:graphviz",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "reverse_graph_concepts_test",
    srcs = [ "reverse_graph_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "subgraph_test",
    srcs = [ "subgraph_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "stoer_wagner_test",
    srcs = [ "stoer_wagner_test.cc", ],
    data = [
        "testdata/prgen_20_70_2.net",
        "testdata/prgen_50_40_2.net",
        "testdata/prgen_50_70_2.net",
    ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "sequential_vertex_coloring_test",
    srcs = [ "sequential_vertex_coloring_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "strong_components_test",
    srcs = [ "strong_components_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "successive_shortest_path_nonnegative_weights_test",
    srcs = [ "successive_shortest_path_nonnegative_weights_test.cc", ],
    deps = [
        ":min_cost_max_flow_utils",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "tiernan_all_cycles_test",
    srcs = [ "tiernan_all_cycles_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "transitive_closure_test",
    srcs = [ "transitive_closure_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "two_graphs_common_spanning_trees_test",
    srcs = [ "two_graphs_common_spanning_trees_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "undirected_dfs_test",
    srcs = [ "undirected_dfs_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "vebl_d_ary_tree_test",
    srcs = [ "vebl_d_ary_tree_test.cc", ],
    deps = [
        ":graph_properties_test_suite",
        ":tree_mutation_test_suite",
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "vf2_sub_graph_iso_test",
    srcs = [ "vf2_sub_graph_iso_test.cc", ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "weighted_matching_test",
    srcs = [ "weighted_matching_test.cc", ],
    data = [
        "testdata/weighted_matching.dat",
        "testdata/weighted_matching_small.dat",
    ],
    deps = [
        "//bagl",
        "@googletest//:gtest_main",
    ],
)
